# gapmas

./: .gitignore  README.rst  TODO.rst  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: tests.yaml
src/gapmas/: __init__.py
src/gapmas/cli/: __init__.py  ghrunner.py
tests/: __init__.py  test_gapmas_cli_ghrunner.py
