[metadata]
name = gapmas
version = 0.0.1
author = Frode Nordahl
author_email = frode.nordahl@gmail.com
description = GitHub Actions Poll Mode AutoScaler (GAPMAS)
long_description = file: README.rst
long_description_content_type = text/x-rst
license_files = LICENSE
url = https://github.com/fnordahl/gapmas
project_urls =
    Bug Tracker = https://github.com/fnordahl/gapmas/issues
classifiers =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    openstacksdk

[options.entry_points]
console_scripts =
    gapmas = gapmas.cli.ghrunner:main

[options.packages.find]
where = src
